# grip-openrave-loader

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  Grasper.cpp  README.md  cmake_install.cmake  correspond_joints  executeFromFileTab.cpp  executeFromFileTab.h  executeFromFileTabApp.cpp  joint_links_dart  joint_links_openrave  joint_links_robotsim
hubo-models/: driving_wheel_full_wpi.urdf
scene/: driving_wheel_full_wpi.urdf  manipulationTab_World_wheel_wpi.urdf
trajs/: movetraj3.txt
trajs_turning/: movetraj0.txt  movetraj1.txt  movetraj2.txt
trajs_waving/: movetraj0.txt  movetraj1.txt
